Release history for Dist-Zilla-App-Command-dumpwith

{{$NEXT}}

0.003001 2016-06-06T21:15:46Z 78c1547
 - Documentation: Update screenshots to reflect new notation.
 - Documentation: Move KNOWN ISSUES further down.

0.003000 2016-05-28T16:13:51Z 2b26a07
 - Add support for "--" escaping to isolate the role names to avoid complications introduced by '-V' becomming a thing
   on Dzil 6.0.
 - Tests and documentation also updated to prefer that notation where it could be ambiguous.
 - Closes #1, thanks to Slaven Rezić and Karen Etheridge for bug feedback.

 [Dependencies::Stats]
 - Dependencies changed since 0.002012, see misc/*.deps* for details
 - develop: +5 ↑1 -1 (suggests: ↑2)
 - test: +2 -1

 [Tests]
 - Be less fragile and stop using my dztest thing. Its overcomplicated and I don't need it anymore.

0.002012 2015-04-15T00:35:51Z 59708df
 [Dependencies]
 - Make sure tests have a new enough version of dztest for app testing.

 [Dependencies::Stats]
 - Dependencies changed since 0.002011, see misc/*.deps* for details
 - test: ↑1

0.002011 2015-04-13T02:42:56Z e9deaed
 [Documentation]
 - Redirect URIs to different repo.

 [Packaging]
 - Removed some large unneeded files

0.002010 2015-04-13T01:38:43Z 3258308
 [Dependencies::Stats]
 - Dependencies changed since 0.002003, see misc/*.deps* for details
 - develop: +3 ↑3 -1 (recommends: ↓1, suggests: ↑2)
 - runtime: +2 (recommends: +1)
 - test: +3 (recommends: ↓1)

 [Internals]
 - Theme loading and construction simplified
 - Theme defaulting uses less useless code.
 - Color themes validated earlier
 - Load Dzil lazier

 [Tests]
 - Added tests covering noop modes, explicit named and prefixed roles, and color theme support and validation.

0.002003 2014-10-31T15:02:11Z 567b541
 [Dependencies::Stats]
 - Dependencies changed since 0.002002, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +6 ↑2 -1 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 -2
 - test: +1 (recommends: ↑2)

 [Internals]
 - remove utf8