@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.047.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
 use strict;
 use warnings;
 
@@ -34,7 +34,7 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "Test::DZil" => 0,
-    "Test::More" => "0.89",
+    "Test::More" => 0,
     "Test::TempDir::Tiny" => 0
   },
   "VERSION" => "0.003002",
@@ -57,7 +57,7 @@ my %FallbackPrereqs = (
   "Path::Tiny" => 0,
   "Scalar::Util" => 0,
   "Test::DZil" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "Test::TempDir::Tiny" => 0,
   "Try::Tiny" => 0,
   "strict" => 0,
