@@ -1,6 +1,13 @@
 Release history for Dist-Zilla-App-Command-dumpwith
 
 {{$NEXT}}
+ [Bugfix]
+ - Fix test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.003001, see misc/*.deps* for details
+ - develop: +1 ↑1 (suggests: ↑2)
+ - test: ↓1
 
 0.003001 2016-06-06T21:15:46Z 78c1547
  - Documentation: Update screenshots to reflect new notation.
